Work through part1&2 of ML Pipeline Preparation.ipynb

--- a/ipynb/ETL Pipeline Preparation.ipynb
+++ b/ipynb/ETL Pipeline Preparation.ipynb
@@ -1806,6 +1806,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                        False\n",
+       "message                   False\n",
+       "original                   True\n",
+       "genre                     False\n",
+       "related                   False\n",
+       "request                   False\n",
+       "offer                     False\n",
+       "aid_related               False\n",
+       "medical_help              False\n",
+       "medical_products          False\n",
+       "search_and_rescue         False\n",
+       "security                  False\n",
+       "military                  False\n",
+       "child_alone               False\n",
+       "water                     False\n",
+       "food                      False\n",
+       "shelter                   False\n",
+       "clothing                  False\n",
+       "money                     False\n",
+       "missing_people            False\n",
+       "refugees                  False\n",
+       "death                     False\n",
+       "other_aid                 False\n",
+       "infrastructure_related    False\n",
+       "transport                 False\n",
+       "buildings                 False\n",
+       "electricity               False\n",
+       "tools                     False\n",
+       "hospitals                 False\n",
+       "shops                     False\n",
+       "aid_centers               False\n",
+       "other_infrastructure      False\n",
+       "weather_related           False\n",
+       "floods                    False\n",
+       "storm                     False\n",
+       "fire                      False\n",
+       "earthquake                False\n",
+       "cold                      False\n",
+       "other_weather             False\n",
+       "direct_report             False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
