--- a/ipynb/ML Pipeline Preparation.ipynb
+++ b/ipynb/ML Pipeline Preparation.ipynb
@@ -14,24 +14,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries\n"
+    "# import libraries\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "import re\n",
+    "from nltk import word_tokenize, pos_tag, ne_chunk, WordNetLemmatizer\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.multioutput import MultiOutputClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((26180, 3), (26180, 36))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load data from database\n",
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df = \n",
-    "X = \n",
-    "Y = "
+    "engine = create_engine('sqlite:///../data/Disaster_Response.db')\n",
+    "# df = pd.read_sql(\"SELECT * FROM Disaster_Response\", engine)\n",
+    "df = pd.read_sql_table(\"Disaster_Response\", engine)\n",
+    "X = df.loc[:,'message':'genre']\n",
+    "Y = df.loc[:,'related':]\n",
+    "X.shape, Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Un front froid se retrouve sur Cuba ce matin. Il pourrait traverser Haiti demain. Des averses de pluie isolee sont encore prevues sur notre region ce soi'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.original[0]"
    ]
   },
   {
@@ -43,12 +87,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# regex pattern for detecting a url\n",
+    "url_regex = 'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
+    "\n",
     "def tokenize(text):\n",
-    "    pass"
+    "    # get list of all urls using regex\n",
+    "    detected_urls = re.findall(url_regex,text)\n",
+    "    \n",
+    "    # replace each url in text string with placeholder\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url,'urlplaceholder')\n",
+    "\n",
+    "    # tokenize text\n",
+    "    tokens = word_tokenize(text)\n",
+    "    \n",
+    "    # initiate lemmatizer\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "    # iterate through each token\n",
+    "    clean_tokens = []\n",
+    "    for tok in tokens:\n",
+    "        \n",
+    "        # lemmatize, normalize case, and remove leading/trailing white space\n",
+    "        clean_tok = lemmatizer.lemmatize(tok).lower().strip()\n",
+    "        clean_tokens.append(clean_tok)\n",
+    "\n",
+    "    return clean_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['un', 'front', 'froid', 'se', 'retrouve', 'sur', 'cuba', 'ce', 'matin', '.', 'il', 'pourrait', 'traverser', 'haiti', 'demain', '.', 'des', 'averses', 'de', 'pluie', 'isolee', 'sont', 'encore', 'prevue', 'sur', 'notre', 'region', 'ce', 'soi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text='Un front froid se retrouve sur Cuba ce matin. Il pourrait traverser Haiti demain. Des averses de pluie isolee sont encore prevues sur notre region ce soi'\n",
+    "print(tokenize(text))"
    ]
   },
   {
@@ -61,11 +147,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = "
+    "pipeline = Pipeline([\n",
+    "    ('vect', CountVectorizer(tokenizer=tokenize)),\n",
+    "    ('tfidf', TfidfTransformer()),\n",
+    "    ('clf', RandomForestClassifier())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import multilabel_confusion_matrix\n",
+    "\n",
+    "def display_results(y_test, y_pred):\n",
+    "#     labels = np.unique(y_pred)\n",
+    "\n",
+    "#     print(\"Labels:\", labels)\n",
+    "    print(\"Confusion Matrix:\\n\", multilabel_confusion_matrix(y_test,y_pred))\n",
+    "#     print(\"Accuracy:\", accuracy_score(y_test,y_pred))"
    ]
   },
   {
@@ -79,10 +185,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('vect',\n",
+       "                 CountVectorizer(analyzer='word', binary=False,\n",
+       "                                 decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.int64'>, encoding='utf-8',\n",
+       "                                 input='content', lowercase=True, max_df=1.0,\n",
+       "                                 max_features=None, min_df=1,\n",
+       "                                 ngram_range=(1, 1), preprocessor=None,\n",
+       "                                 stop_words=None, strip_accents=None,\n",
+       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                                 tokenizer=<function tokenize at...\n",
+       "                 RandomForestClassifier(bootstrap=True, class_weight=None,\n",
+       "                                        criterion='gini', max_depth=None,\n",
+       "                                        max_features='auto',\n",
+       "                                        max_leaf_nodes=None,\n",
+       "                                        min_impurity_decrease=0.0,\n",
+       "                                        min_impurity_split=None,\n",
+       "                                        min_samples_leaf=1, min_samples_split=2,\n",
+       "                                        min_weight_fraction_leaf=0.0,\n",
+       "                                        n_estimators=10, n_jobs=None,\n",
+       "                                        oob_score=False, random_state=None,\n",
+       "                                        verbose=0, warm_start=False))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X.message, Y, random_state=1234)\n",
+    "\n",
+    "# train classifier\n",
+    "pipeline.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,10 +246,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "multiclass-multioutput is not supported",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-4c8493834813>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmultilabel_confusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m//anaconda3/lib/python3.7/site-packages/sklearn/metrics/classification.py\u001b[0m in \u001b[0;36mmultilabel_confusion_matrix\u001b[0;34m(y_true, y_pred, sample_weight, labels, samplewise)\u001b[0m\n\u001b[1;32m    394\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    395\u001b[0m     \"\"\"\n\u001b[0;32m--> 396\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    397\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    398\u001b[0m         \u001b[0msample_weight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolumn_or_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda3/lib/python3.7/site-packages/sklearn/metrics/classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;31m# No metrics support \"multiclass-multioutput\" format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multilabel-indicator\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0} is not supported\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"multiclass\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: multiclass-multioutput is not supported"
+     ]
+    }
+   ],
+   "source": [
+    "multilabel_confusion_matrix(y_test.values, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 1, 0, ..., 0, 0, 1],\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [1, 1, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 1, 0, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
