feat: Add visualization components for run.py

--- a/ipynb/ETL Pipeline Preparation.ipynb
+++ b/ipynb/ETL Pipeline Preparation.ipynb
@@ -19,6 +19,7 @@
    "outputs": [],
    "source": [
     "# import libraries\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -3550,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3565,6 +3566,137 @@
    "source": [
     "### 8. Use this notebook to complete `etl_pipeline.py`\n",
     "Use the template file attached in the Resources folder to write a script that runs the steps above to create a database based on new datasets specified by the user. Alternatively, you can complete `etl_pipeline.py` in the classroom on the `Project Workspace IDE` coming later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. Visualization components for run.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(IntervalIndex([(3.579, 46.0], (46.0, 88.0], (88.0, 130.0], (130.0, 172.0], (172.0, 214.0], (214.0, 256.0], (256.0, 298.0], (298.0, 340.0], (340.0, 382.0], (382.0, 424.0]],\n",
+       "               closed='right',\n",
+       "               dtype='interval[float64]'),\n",
+       " array([ 8.77, 23.88, 21.43, 19.61, 12.3 ,  7.58,  3.33,  1.74,  0.84,\n",
+       "         0.51]))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# message length\n",
+    "message_lengths = df.message.str.len()\n",
+    "length_percents=(message_lengths[message_lengths<=message_lengths.quantile(.99)].value_counts(normalize=True,bins=10).round(decimals=4).sort_index())*100\n",
+    "length_percents.index, length_percents.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3.579-46.0',\n",
+       " '46.0-88.0',\n",
+       " '88.0-130.0',\n",
+       " '130.0-172.0',\n",
+       " '172.0-214.0',\n",
+       " '214.0-256.0',\n",
+       " '256.0-298.0',\n",
+       " '298.0-340.0',\n",
+       " '340.0-382.0',\n",
+       " '382.0-424.0']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# generate x-ticks base on Serise.value_counts.index for plotly\n",
+    "xticks = []\n",
+    "for idx in length_percents.index:\n",
+    "    xticks.append(str(idx.left)+'-'+str(idx.right))\n",
+    "    \n",
+    "xticks "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.23586469,  0.03505207, ...,  0.07466508,\n",
+       "         0.12255749,  0.25486427],\n",
+       "       [ 0.23586469,  1.        , -0.03050871, ..., -0.0012755 ,\n",
+       "        -0.01544376,  0.6479713 ],\n",
+       "       [ 0.03505207, -0.03050871,  1.        , ..., -0.00965781,\n",
+       "        -0.00562015,  0.01905024],\n",
+       "       ...,\n",
+       "       [ 0.07466508, -0.0012755 , -0.00965781, ...,  1.        ,\n",
+       "         0.07482098,  0.00420615],\n",
+       "       [ 0.12255749, -0.01544376, -0.00562015, ...,  0.07482098,\n",
+       "         1.        ,  0.00326831],\n",
+       "       [ 0.25486427,  0.6479713 ,  0.01905024, ...,  0.00420615,\n",
+       "         0.00326831,  1.        ]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# correlation between labels\n",
+    "labels = df.loc[:,'related':]\n",
+    "cor = labels.corr()\n",
+    "cor.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['related', 'request', 'offer', 'aid_related', 'medical_help',\n",
+       "       'medical_products', 'search_and_rescue', 'security', 'military',\n",
+       "       'child_alone', 'water', 'food', 'shelter', 'clothing', 'money',\n",
+       "       'missing_people', 'refugees', 'death', 'other_aid',\n",
+       "       'infrastructure_related', 'transport', 'buildings', 'electricity',\n",
+       "       'tools', 'hospitals', 'shops', 'aid_centers', 'other_infrastructure',\n",
+       "       'weather_related', 'floods', 'storm', 'fire', 'earthquake', 'cold',\n",
+       "       'other_weather', 'direct_report'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cor.index"
    ]
   },
   {
