--- a/ipynb/ML Pipeline Preparation.ipynb
+++ b/ipynb/ML Pipeline Preparation.ipynb
@@ -26,12 +26,11 @@
     "from nltk import word_tokenize, pos_tag, ne_chunk, WordNetLemmatizer\n",
     "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.pipeline import Pipeline, FeatureUnion, make_pipeline\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer, TfidfVectorizer\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.multioutput import MultiOutputClassifier\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-    "from sklearn.impute import SimpleImputer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "# import category_encoders as ce"
    ]
