--- a/ipynb/ETL Pipeline Preparation.ipynb
+++ b/ipynb/ETL Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "(26248, 4)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "(26180, 26177, 9631, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "array(['direct', 'social', 'news'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "135"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
        "[135 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        "(26180, 4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "5  14  related-0;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "(26180, 4003)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
        "135"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
        "[135 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
        "Name: message, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
        "21360  24779  related-1;request-0;offer-0;aid_related-1;medi..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1554,7 @@
        "array([3])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1972,7 @@
        "[132 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
        "(26248, 26216, 26180, 36)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2138,7 @@
        "((26386, 5), 26180)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2149,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2194,7 @@
        "(26386, 36)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2207,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2448,7 +2448,7 @@
        "[6 rows x 36 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2459,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2730,7 +2730,7 @@
        "[6 rows x 36 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2752,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
        "204"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2773,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2978,7 +2978,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3005,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -3014,7 +3014,7 @@
        "((26386, 5), (26386, 36))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3026,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -3275,7 +3275,7 @@
        "[6 rows x 41 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3288,7 +3288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -3297,7 +3297,7 @@
        "(26386, 41)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3305,6 +3305,61 @@
    "source": [
     "# shape looks fine after concatenation\n",
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "related [1 0 2]\n",
+      "request [0 1]\n",
+      "offer [0 1]\n",
+      "aid_related [0 1]\n",
+      "medical_help [0 1]\n",
+      "medical_products [0 1]\n",
+      "search_and_rescue [0 1]\n",
+      "security [0 1]\n",
+      "military [0 1]\n",
+      "child_alone [0]\n",
+      "water [0 1]\n",
+      "food [0 1]\n",
+      "shelter [0 1]\n",
+      "clothing [0 1]\n",
+      "money [0 1]\n",
+      "missing_people [0 1]\n",
+      "refugees [0 1]\n",
+      "death [0 1]\n",
+      "other_aid [0 1]\n",
+      "infrastructure_related [0 1]\n",
+      "transport [0 1]\n",
+      "buildings [0 1]\n",
+      "electricity [0 1]\n",
+      "tools [0 1]\n",
+      "hospitals [0 1]\n",
+      "shops [0 1]\n",
+      "aid_centers [0 1]\n",
+      "other_infrastructure [0 1]\n",
+      "weather_related [0 1]\n",
+      "floods [0 1]\n",
+      "storm [0 1]\n",
+      "fire [0 1]\n",
+      "earthquake [0 1]\n",
+      "cold [0 1]\n",
+      "other_weather [0 1]\n",
+      "direct_report [0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check labels BEFORE removing duplicates\n",
+    "# some labels are not binary / child_alone [0] / related [1 0 2]\n",
+    "for col in df.loc[:,'related':].columns:\n",
+    "    print(col, df[col].unique())\n"
    ]
   },
   {
@@ -3533,6 +3588,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "related [1 0 2]\n",
+      "request [0 1]\n",
+      "offer [0 1]\n",
+      "aid_related [0 1]\n",
+      "medical_help [0 1]\n",
+      "medical_products [0 1]\n",
+      "search_and_rescue [0 1]\n",
+      "security [0 1]\n",
+      "military [0 1]\n",
+      "child_alone [0]\n",
+      "water [0 1]\n",
+      "food [0 1]\n",
+      "shelter [0 1]\n",
+      "clothing [0 1]\n",
+      "money [0 1]\n",
+      "missing_people [0 1]\n",
+      "refugees [0 1]\n",
+      "death [0 1]\n",
+      "other_aid [0 1]\n",
+      "infrastructure_related [0 1]\n",
+      "transport [0 1]\n",
+      "buildings [0 1]\n",
+      "electricity [0 1]\n",
+      "tools [0 1]\n",
+      "hospitals [0 1]\n",
+      "shops [0 1]\n",
+      "aid_centers [0 1]\n",
+      "other_infrastructure [0 1]\n",
+      "weather_related [0 1]\n",
+      "floods [0 1]\n",
+      "storm [0 1]\n",
+      "fire [0 1]\n",
+      "earthquake [0 1]\n",
+      "cold [0 1]\n",
+      "other_weather [0 1]\n",
+      "direct_report [0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check labels AFTER removing duplicates\n",
+    "# some labels are not binary / child_alone [0] / related [1 0 2]\n",
+    "for col in df.loc[:,'related':].columns:\n",
+    "    print(col, df[col].unique())\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3555,9 +3665,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save df to sqlite\n",
-    "engine = create_engine('sqlite:///../data/Disaster_Response.db')\n",
-    "df.to_sql('Disaster_Response', engine, index=False)"
+    "# # save df to sqlite\n",
+    "# engine = create_engine('sqlite:///../data/Disaster_Response.db')\n",
+    "# df.to_sql('Disaster_Response', engine, index=False)"
    ]
   },
   {
